# attn-bench

./: .gitignore  CMakeLists.txt  LICENSE  Package.resolved  Package.swift  README.md  paper.typ
Sources/AttnBench/: AttnBench.swift
Sources/AttnBenchLib/: Attention.swift
Tests/AttnBenchTests/: AttnBenchTests.swift
analysis/: analyze_benchmarks.py  requirements.txt
data/: benchmark_results.txt
docs/: BLOG_POST.md  CONTRIBUTING.md  LINKEDIN_POST.md
figures/: benchmark_stats.json  statistical_summary.txt  table_results.tex
paper/: paper.typ  references.bib
